--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -7,7 +7,22 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from ipywidgets import interact\n",
+    "from matplotlib import cm\n",
+    "from mpl_toolkits.mplot3d.art3d import Poly3DCollection, Line3DCollection\n",
+    "from scipy import ndimage as ndi\n",
+    "from scipy import stats\n",
+    "\n",
+    "from skimage import (color, data, exposure, feature, filters, io, measure,\n",
+    "                    morphology, restoration, segmentation, transform,\n",
+    "                    util)\n",
+    "\n",
+    "%matplotlib inline"
+   ]
   }
  ],
  "metadata": {
