conversation with Alex

--- a/tutorial_notebooks/01_filters_segmentation.ipynb
+++ b/tutorial_notebooks/01_filters_segmentation.ipynb
@@ -1001,7 +1001,20 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# todo: ways to save tiff stacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.external import tifffile\n",
+    "outfile = 'images/cells_interior_labels.tiff'\n",
+    "tifffile.imsave(outfile, interior_labels)"
+   ]
   },
   {
    "cell_type": "markdown",
