--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -8,6 +8,17 @@
    },
    "outputs": [],
    "source": [
+    "# focus 3D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -22,6 +33,19 @@
     "                    util)\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from skimage.external import tifffile\n",
+    "inputfile = 'images/cells_interior_labels.tiff'\n",
+    "tifffile.im (inputfile)"
    ]
   }
  ],
