--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -7,7 +7,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#downsampling from 02_\n",
+    "#foreground vs. background and automated cropping - techniques based on thresholding\n",
+    "#microCT through maxproj\n"
+   ]
   }
  ],
  "metadata": {
