--- a/tutorial_notebooks/01_filters_segmentation.ipynb
+++ b/tutorial_notebooks/01_filters_segmentation.ipynb
@@ -995,32 +995,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# todo: ways to save tiff stacks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from skimage.external import tifffile\n",
-    "outfile = 'images/cells_interior_labels.tiff'\n",
-    "tifffile.imsave(outfile, interior_labels)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After clearing the border, the object labels are no longer sequentially increasing. The labels can be renumbered such that there are no jumps in the list of image labels."
+    "After clearing the border, the object labels are no longer sequentially increasing. The labels can be renumbered such that there are no jumps in the list of image labels:"
    ]
   },
   {
@@ -1048,6 +1026,24 @@
     "relabeled, _, _ = segmentation.relabel_sequential(interior_labels)\n",
     "\n",
     "print(\"relabeled labels: {}\".format(np.unique(relabeled)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This result is likely to be used for comparison with results of other algorithms, so let's learn how to save multi-tiffs: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from skimage.external import tifffile\n",
+    "outfile = 'images/cells_interior_labels.tiff'\n",
+    "tifffile.imsave(outfile, relabeled)"
    ]
   },
   {
