solved the itkwidget problem for relabelled

--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,14 +36,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n"
+      "/Users/dani/anaconda3/envs/imagej/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n"
      ]
     }
    ],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -181,17 +182,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Dani TODO: discuss package \n",
-    "#https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html"
+    "#https://itkpythonpackage.readthedocs.io/en/latest/Quick_start_guide.html\n",
+    "#https://itk.org/ITKExamples/src/index.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x213116cf8>"
+       "<matplotlib.image.AxesImage at 0x1d84fd4f98>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -233,13 +235,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28fb9459089f4c65bc5dc90098fe8788",
+       "model_id": "f5c83ab6baac4fb28906b3cedb322a9a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -252,10 +254,8 @@
     }
    ],
    "source": [
-    "\n",
-    "#image = itk.imread('images/cells_interior_labels.tiff') #,itk.RGBPixel[itk.UC]) #,itk.ctype('float')) #add this param if needed\n",
+    "#Reformat the numpy array into an itk friendly matrix\n",
     "image = itk.GetImageFromArray(relabeled.astype(np.int16))\n",
-    "#itk.GetImageViewFromArray(image[:,:,:])\n",
     "view(image, slicing_planes=True)\n",
     "\n",
     "#showing full stack"
@@ -263,38 +263,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1317f73692f149bda68946bf20eec431",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "<itkImagePython.itkImageSS3; proxy of <Swig Object of type 'itkImageSS3 *' at 0x103f6b780> >"
+       "Viewer(gradient_opacity=0.22, rendered_image=<itkImagePython.itkImageUC3; proxy of <Swig Object of type 'itkIm…"
       ]
      },
-     "execution_count": 49,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "a= itk.GetImageViewFromArray(data.astype(np.int16))\n",
-    "#view(a,slicing_planes=True)\n",
-    "a"
+    "image2 = itk.imread('images/cells_interior_labels.tiff') #,itk.ctype('float')) #add this param if needed\n",
+    "view(image2,slicing_planes=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mayavi'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-19-391e74ae0ec1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mmayavi\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mayavi'"
+     ]
+    }
+   ],
    "source": [
-    "imageBlock = ic[::10].concatenate()\n",
-    "imageBlock = imageBlock==217#label(image[100:600,300:400,100:200])#1000:1100])\n",
-    "imageBlock = imageBlock[:,::10,::10]\n",
-    "imageBlock.shape\n"
+    "import mayavi"
    ]
   },
   {
@@ -306,23 +316,6 @@
    "outputs": [],
    "source": [
     "imageBlock = imageBlock.astype(np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#file_name = '/Users/dani/Documents/data/fibers/materialsFacility/alex_fibers/snapshots/binary_ndown10.tif'\n",
-    "#image = itk.imread(file_name)\n",
-    "#itk.GetImageViewFromArray(imageBlock.astype(np.float64))\n",
-    "#itk.GetImageViewFromArray(image[:,:,:])\n",
-    "view(imageBlock, slicing_planes=True)\n",
-    "\n",
-    "#showing full stack"
    ]
   }
  ],
