3 packages for visualization

--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -8,10 +8,47 @@
    },
    "outputs": [],
    "source": [
-    "#downsampling from 02_\n",
+    "#You saw downsampling at 01_filters_segmentation using filtering, now we will explore slicing as a way to downsample \n",
+    "\n",
     "#foreground vs. background and automated cropping - techniques based on thresholding\n",
+    "\n",
     "#microCT through maxproj\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageBlock = ic[::10].concatenate()\n",
+    "imageBlock = imageBlock==217#label(image[100:600,300:400,100:200])#1000:1100])\n",
+    "imageBlock = imageBlock[:,::10,::10]\n",
+    "imageBlock.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imageBlock = imageBlock.astype(np.uint8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -30,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
