--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -16,11 +16,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 1. Slicing"
+   ]
   },
   {
    "cell_type": "code",
@@ -44,11 +44,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 2. Cropping"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Maximum projection"
+   ]
   }
  ],
  "metadata": {
