--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,16 +409,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1c3a5e56d8>"
+       "<matplotlib.image.AxesImage at 0x1d851d5630>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
      "output_type": "stream",
      "text": [
       "* Data shape: (60, 256, 256)\n",
-      "* Data type:  int32\n",
+      "* Data type:  int64\n",
       "* Data range: (0, 9)\n"
      ]
     }
@@ -462,13 +462,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5c83ab6baac4fb28906b3cedb322a9a",
+       "model_id": "0417138e75f840638f209259fae1055d",
        "version_major": 2,
        "version_minor": 0
       },
