included coreObj class

--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -173,6 +173,151 @@
    "source": [
     "# 3. Maximum projection"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#load a large microCT dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to return mask and coordinates of bounding box \n",
+    "import numpy as np\n",
+    "import fnmatch,os\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from skimage import img_as_ubyte, filters, morphology, exposure, io\n",
+    "from skimage.filters import threshold_isodata\n",
+    "from skimage.measure import regionprops,label\n",
+    "from skimage.transform import pyramid_expand\n",
+    "from scipy import ndimage as ndi\n",
+    "\n",
+    "class CoreObject: \n",
+    "    \n",
+    "    \n",
+    "    def __init__(self,inputs,outputs): \n",
+    "        '''Input and output paths\n",
+    "        '''\n",
+    "        self.inputs = inputs\n",
+    "        self.outputs = outputs\n",
+    "        self.mask = [] #mask with inside (255) and outside (0) regions\n",
+    "        self.x = 0\n",
+    "        self.y = 0\n",
+    "        self.xn = 10\n",
+    "        self.yn = 10        \n",
+    "\n",
+    "    def detectCore(self):\n",
+    "        ''' Find core of microCT sample using max-projection'''\n",
+    "        #nfiles = len(fnmatch.filter(os.listdir(path),'*.tiff')) #MAKE SURE IT IS\n",
+    "        filename = self.inputs+\"*.tiff\"\n",
+    "        ic = io.ImageCollection(filename,conserve_memory=True) #never keeps more than 1 slice in mem\n",
+    "        nslices = len(ic)\n",
+    "\n",
+    "        ndown = 10 #downsample by a order of magnitude for masking\n",
+    "        IM_MAX = ic[0][::ndown,::ndown]\n",
+    "        for n in np.arange(0,nslices-1,ndown):\n",
+    "            IM_MAX = np.maximum(IM_MAX, ic[n+1][::ndown,::ndown])\n",
+    "\n",
+    "        thresh = threshold_isodata(IM_MAX)\n",
+    "        mask = IM_MAX>thresh\n",
+    "\n",
+    "        mask = ndi.binary_fill_holes(mask)\n",
+    "        mask = morphology.opening(mask, morphology.disk(2))\n",
+    "        \n",
+    "        #Upsample - TODO: mask different size than orig\n",
+    "        mask = pyramid_expand(mask, upscale=ndown, sigma=None, order=1,multichannel=None)\n",
+    "        thresh = threshold_isodata(mask)\n",
+    "\n",
+    "        mask = mask>thresh\n",
+    "\n",
+    "        labeled = label(mask)\n",
+    "        regions = regionprops(labeled)\n",
+    "        print(\"Just one ROI? \",len(regions)==True)\n",
+    "        for props in regions:\n",
+    "            print(props.bbox)\n",
+    "        mask = mask[props.bbox[0]:props.bbox[2],props.bbox[1]:props.bbox[3]]\n",
+    "        #Update class attrib\n",
+    "        self.ic = ic\n",
+    "        self.nslices = len(ic)\n",
+    "        self.mask = mask #reduced cross-sectional area\n",
+    "        self.maxproj = IM_MAX\n",
+    "        self.x = props.bbox[0]\n",
+    "        self.xn = props.bbox[2]\n",
+    "        self.y = props.bbox[1]\n",
+    "        self.yn = props.bbox[3]    \n",
+    "        #Saving mask!!!\n",
+    "        outfile = self.outputs + 'bMaxprojection.tiff'\n",
+    "        plt.imsave(outfile, mask, cmap='gray')\n",
+    "\n",
+    "        \n",
+    "    def maskOrigSlice(self,ic_n,save=False):\n",
+    "        ''' Mask a slice with number ic_n and save snapshot\n",
+    "        '''\n",
+    "        c = self\n",
+    "        cropped = []\n",
+    "        if (ic_n <len(self.ic)):\n",
+    "            aSlice = self.ic[ic_n]\n",
+    "            cropped = aSlice[c.x:c.xn, c.y:c.yn]*self.mask\n",
+    "            \n",
+    "            if save:\n",
+    "                #Creating file names that carry experiment prefix\n",
+    "                fname = self.ic.files[ic_n].split(\"/\")\n",
+    "                fname = fname[-1]\n",
+    "                print(fname)\n",
+    "                fname = self.outputs + \"mask\" + fname + '.tiff'\n",
+    "\n",
+    "                \n",
+    "                fig, axes = plt.subplots(1, 1, figsize=(15, 10))\n",
+    "                axes.imshow(cropped * c.mask,cmap='inferno')\n",
+    "                axes.set_title('Masking slice '+str(ic_n))\n",
+    "                axes.set_axis_off()\n",
+    "                plt.tight_layout()\n",
+    "                fig.savefig(fname)\n",
+    "        else:\n",
+    "             print('Stack <',len(self.ic))   \n",
+    "        return cropped    \n",
+    "    \n",
+    "    def montage(self):\n",
+    "        '''Create montage 3x3 that fits a Letter-page'''\n",
+    "        fig, axes = plt.subplots(3, 3, figsize=(20, 20))\n",
+    "        #Selecting a few views among the slices\n",
+    "        delta  = np.round(self.nslices/9)\n",
+    "        islices = np.arange(1,self.nslices,delta)\n",
+    "        islices = islices.astype(int)\n",
+    "        selem = morphology.square(3)\n",
+    "        for i, n in enumerate(islices):\n",
+    "            im_filt = self.maskOrigSlice(n)\n",
+    "            im_filt = ndi.median_filter(im_filt, footprint=selem) #raw image\n",
+    "            xy = np.unravel_index(i, (3,3))\n",
+    "            axes[xy].imshow(im_filt,cmap='gray')\n",
+    "            axes[xy].set_title('Slice %i'% n)\n",
+    "            axes[xy].set_axis_off()\n",
+    "            fig.subplots_adjust( wspace = -0.1,  hspace = 0.1 )    \n",
+    "        fig.savefig(resultsFolder+'SlicesAcross.png')\n",
+    "        print('Saved@ '+resultsFolder+'SlicesAcross.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
