Fixing Numba example

--- a/tutorial_notebooks/04_io_parallel.ipynb
+++ b/tutorial_notebooks/04_io_parallel.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# numba and joblib"
@@ -13,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,29 +105,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The other, `fibonacci_numba`, uses the decorator `@jit` to optimize the function."
+    "The other, `fibonacci_numba`, uses Numba to optimize the function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "@jit\n",
-    "def fibonacci_numba(elem=10):\n",
-    "    \"\"\"\n",
-    "    \"\"\"\n",
-    "    fibonacci = np.zeros(elem)\n",
-    "    aux_1, aux_2 = 1, 1\n",
-    "    fibonacci[0: 2] = aux_1, aux_2\n",
-    "\n",
-    "    for idx in range(2, elem):\n",
-    "        fibo_current = aux_1 + aux_2\n",
-    "        fibonacci[idx] = fibo_current\n",
-    "        aux_1 = aux_2\n",
-    "        aux_2 = fibo_current\n",
-    "    return fibonacci"
+    "fibonacci_numba = jit()(fibonacci_no_numba)"
    ]
   },
   {
@@ -141,18 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "* The 9 first elements of the Fibonacci sequence, using fibonacci_no_numba: [ 1.  1.  2.  3.  5.  8. 13. 21. 34.]\n",
-      "* The 9 first elements of the Fibonacci sequence, using fibonacci_numba: [ 1.  1.  2.  3.  5.  8. 13. 21. 34.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "elem = 9\n",
     "print(f'* The {elem} first elements of the Fibonacci sequence, using fibonacci_no_numba: {fibonacci_no_numba(elem=elem)}')\n",
@@ -168,36 +144,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.75 µs ± 161 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%timeit fibonacci_numba(elem=1000)"
+    "time_no_numba = %timeit -o fibonacci_no_numba(elem=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "259 µs ± 29.1 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%timeit fibonacci_no_numba(elem=1000)"
+    "time_numba = %timeit -o fibonacci_numba(elem=1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Numba version is around {int(time_no_numba.best / time_numba.best)} times faster than non-Numba one.')"
    ]
   },
   {
