--- a/tutorial_notebooks/03_features_datareduction.ipynb
+++ b/tutorial_notebooks/03_features_datareduction.ipynb
@@ -39,24 +39,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dani/anaconda3/envs/imagej/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
-      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n"
-     ]
-    }
-   ],
-   "source": [
-    "data, rescaled, equalized = sc.results_from_part_1()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -318,6 +300,50 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. Probe for global visualization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dani/anaconda3/envs/imagej/lib/python3.6/site-packages/scipy/stats/stats.py:1713: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return np.add.reduce(sorted[indexer] * weights, axis=axis) / sumval\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1) Read lean: conserve mem\n",
+    "inputFolder = \"mikeway\"\n",
+    "filename = inputFolder+\"*.tiff\"\n",
+    "        ic = io.ImageCollection(filename,conserve_memory=True) #never\n",
+    "keeps more than 1 slice in mem\n",
+    "        nslices = len(ic)\n",
+    "\n",
+    "#2) Define structure of interest: local/global\n",
+    "if(isglobal):\n",
+    "downsample = 10\n",
+    "data = data[::downsample,::downsample,::downsample]\n",
+    "else:\n",
+    "#define spatial coords. of zone of interest\n",
+    "\n",
+    "#3) Ball park\n",
+    "import itk\n",
+    "from itkwidgets import view\n",
+    "#Reformat the numpy array into an itk friendly matrix\n",
+    "image = itk.GetImageFromArray(data.astype(np.int16))\n",
+    "view(image, slicing_planes=True)"
+   ]
   }
  ],
  "metadata": {
