--- a/tutorial_notebooks/02_datasets_visualization.ipynb
+++ b/tutorial_notebooks/02_datasets_visualization.ipynb
@@ -481,7 +481,7 @@
     }
    ],
    "source": [
-    "#Reformat the numpy array into an itk friendly matrix\n",
+    "#Reformat the numpy array into an itk matrix\n",
     "image = itk.GetImageFromArray(relabeled.astype(np.int16))\n",
     "view(image, slicing_planes=True)\n",
     "\n",
